CostalCloud/force-app/main/default/objects/WorkOrder/fields/Has_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Has_Service_Report__c</fullName>
    <inlineHelpText>Looks at attachment/files for type = Service Report</inlineHelpText>
    <label>Has Service Report</label>
    <summaryFilterItems>
        <field>Attachment_Files__c.Type__c</field>
        <operation>equals</operation>
        <value>Service Report</value>
    </summaryFilterItems>
    <summaryForeignKey>Attachment_Files__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>