CostalCloud/force-app/main/default/objects/WorkOrder/fields/Has_Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Has_Special_Order__c</fullName>
    <inlineHelpText>Looks at all related Merchandise Lines and if any is marked as SO will mark this record as Special Order</inlineHelpText>
    <label>Has Special Order</label>
    <summaryFilterItems>
        <field>Merchandise__c.API_Type_Name__c</field>
        <operation>contains</operation>
        <value>pecialOrderMerchandise</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchandise__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>