CostalCloud/force-app/main/default/objects/WorkOrder/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <formula>Account.PersonContact.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>