CostalCloud/force-app/main/default/objects/WorkOrder/fields/Home_Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Home_Year_Built__c</fullName>
    <inlineHelpText>Enter full year (4 characters) i/e 1995, not 95</inlineHelpText>
    <label>Year Home Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>