CostalCloud/force-app/main/default/objects/WorkOrder/fields/Homeowner_Signature__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Signature__c</fullName>
    <label>Homeowner Signature</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>