CostalCloud/force-app/main/default/objects/WorkOrder/fields/Hours_since_last_note__c.field-meta.xml
<CustomField>
    <fullName>Hours_since_last_note__c</fullName>
    <formula>(NOW() -  Last_PO_Note_Date__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours since last note</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>