CostalCloud/force-app/main/default/objects/WorkOrder/fields/How_will_you_meet_RRP_Req__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_meet_RRP_Req__c</fullName>
    <label>How will you meet RRP Req?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Presumed</fullName>
            </value>
            <value>
                <fullName>No Labor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>