CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_105_Receipt_of_Lead_Paint_Pamphlet__c.field-meta.xml
<CustomField>
    <fullName>HS_105_Receipt_of_Lead_Paint_Pamphlet__c</fullName>
    <label>HS-105 Receipt of Lead Paint Pamphlet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>