CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_115_Lead_Paint_Renovation__c.field-meta.xml
<CustomField>
    <fullName>HS_115_Lead_Paint_Renovation__c</fullName>
    <label>HS-115 Lead Paint Renovation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>