CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_118_LSWP_Exception__c.field-meta.xml
<CustomField>
    <fullName>HS_118_LSWP_Exception__c</fullName>
    <label>HS-118 LSWP Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>