CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_119_Lead_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>HS_119_Lead_Test_Results__c</fullName>
    <label>HS-119 Lead Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>