CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_123_Alabama_Lead_Renovation__c.field-meta.xml
<CustomField>
    <fullName>HS_123_Alabama_Lead_Renovation__c</fullName>
    <label>HS-123 Alabama Lead Renovation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>