CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_124_MS_Lead_Based__c.field-meta.xml
<CustomField>
    <fullName>HS_124_MS_Lead_Based__c</fullName>
    <label>HS-124 MS Lead Based</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>