CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_125_Rhode_Island_Lead_Start_Work__c.field-meta.xml
<CustomField>
    <fullName>HS_125_Rhode_Island_Lead_Start_Work__c</fullName>
    <label>HS-125 Rhode Island Lead Start Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>