CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_128_Lead_Activity_Permit_Application__c.field-meta.xml
<CustomField>
    <fullName>HS_128_Lead_Activity_Permit_Application__c</fullName>
    <label>HS-128 Lead Activity Permit Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>