CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_329_ICA__c.field-meta.xml
<CustomField>
    <fullName>HS_329_ICA__c</fullName>
    <label>HS-329 ICA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>