CostalCloud/force-app/main/default/objects/WorkOrder/fields/HS_333_National_Measure_Door__c.field-meta.xml
<CustomField>
    <fullName>HS_333_National_Measure_Door__c</fullName>
    <label>HS-333 National Measure - Door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>