CostalCloud/force-app/main/default/objects/WorkOrder/fields/ICA_Document_Sent__c.field-meta.xml
<CustomField>
    <fullName>ICA_Document_Sent__c</fullName>
    <label>ICA Document Sent</label>
    <summaryFilterItems>
        <field>Attachment_Files__c.Type__c</field>
        <operation>equals</operation>
        <value>ICA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attachment_Files__c.Date_Time_sent_to_Client__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Attachment_Files__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>