CostalCloud/force-app/main/default/objects/WorkOrder/fields/Install2GO_Form__c.field-meta.xml
<CustomField>
    <fullName>Install2GO_Form__c</fullName>
    <label>Install2GO Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>