CostalCloud/force-app/main/default/objects/WorkOrder/fields/Install_Issues_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Issues_Notes__c</fullName>
    <label>Install Issues Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>