CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only accounts with record type of &quot;Installer&quot; may be selected.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Installer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Installer_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>