CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer_Action__c.field-meta.xml
<CustomField>
    <fullName>Installer_Action__c</fullName>
    <label>Installer Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Responding</fullName>
            </value>
            <value>
                <fullName>Customer Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Customer Requested Cancelation</fullName>
            </value>
            <value>
                <fullName>Emergency/Health</fullName>
            </value>
            <value>
                <fullName>FM/RM Updated</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Need Address Verification - Invalid Address</fullName>
            </value>
            <value>
                <fullName>Need Valid Contact Information</fullName>
            </value>
            <value>
                <fullName>PO Assigned to Wrong Installer</fullName>
            </value>
            <value>
                <fullName>PO Incorrect/Update Required</fullName>
            </value>
            <value>
                <fullName>Product Damaged/Defective</fullName>
            </value>
            <value>
                <fullName>Product Delayed</fullName>
            </value>
            <value>
                <fullName>Product Incorrect</fullName>
            </value>
            <value>
                <fullName>Product Not Available</fullName>
            </value>
            <value>
                <fullName>Product Received</fullName>
            </value>
            <value>
                <fullName>Questions/Concerns on PO</fullName>
            </value>
            <value>
                <fullName>Store Updated</fullName>
            </value>
            <value>
                <fullName>Waiting on Design/Product Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>