CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installer_Adjustment_Amount__c</fullName>
    <label>Installer Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>