CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer_Payment__c.field-meta.xml
<CustomField>
    <fullName>Installer_Payment__c</fullName>
    <label>Installer Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>