CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer_Percent__c.field-meta.xml
<CustomField>
    <fullName>Installer_Percent__c</fullName>
    <inlineHelpText>Trigger populates value from Installer Available record</inlineHelpText>
    <label>Installer Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>