CostalCloud/force-app/main/default/objects/WorkOrder/fields/Installer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Installer_Signature__c</fullName>
    <label>Installer Signature</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>