CostalCloud/force-app/main/default/objects/WorkOrder/fields/InstallerIntacctAcctID__c.field-meta.xml
<CustomField>
    <fullName>InstallerIntacctAcctID__c</fullName>
    <formula>Installer__r.Integration_Key_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstallerIntacctAcctID</label>
    <type>Text</type>
</CustomField>