CostalCloud/force-app/main/default/objects/WorkOrder/fields/Int_THD_PO_Detail_JSON__c.field-meta.xml
<CustomField>
    <fullName>Int_THD_PO_Detail_JSON__c</fullName>
    <description>This is the response from the Client API response for the Work Order Details information, there is no formatting in the response. May need to reformat the JSON on a formatter software or tool</description>
    <inlineHelpText>This is the response from the Client API response for the Work Order Details information, there is no formatting in the response. May need to reformat the JSON on a formatter software or tool</inlineHelpText>
    <label>Int - PO Detail JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>