CostalCloud/force-app/main/default/objects/WorkOrder/fields/Int_THD_PO_EWR_JSON__c.field-meta.xml
<CustomField>
    <fullName>Int_THD_PO_EWR_JSON__c</fullName>
    <description>Shows the Data for EWR related to the PO Record</description>
    <label>Int - THD - PO EWR JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>