CostalCloud/force-app/main/default/objects/WorkOrder/fields/IntacctIntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntacctIntegrationKey__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used for the Intacct integration</inlineHelpText>
    <label>IntacctIntegrationKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>