CostalCloud/force-app/main/default/objects/WorkOrder/fields/Integration_Key_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_WorkOrder__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key (WorkOrder)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>