CostalCloud/force-app/main/default/objects/WorkOrder/fields/Invoiced_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Total__c</fullName>
    <label>Invoiced Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>