CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_a_Jobsite_Visit_being_made_for_PO__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Jobsite_Visit_being_made_for_PO__c</fullName>
    <label>Is a Jobsite Visit being made for PO?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>