CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_a_Labor_Bid_being_submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Labor_Bid_being_submitted__c</fullName>
    <label>Is a Labor Bid being submitted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>