CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <formula>IF (
	AND (
		NOT( ISBLANK( ParentWorkOrderId )) 
        , NOT ( RecordType.DeveloperName = &apos;Installation&apos;)
	)
	, 1
	, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>