CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_on_Backorder__c.field-meta.xml
<CustomField>
    <fullName>Is_on_Backorder__c</fullName>
    <label>Is on Backorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>