CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <formula>IF(
	 ISBLANK( ParentWorkOrderId )  || 
 (CONTAINS( Parent_Type__c , &quot;Measure&quot;)
		)
	, true
	, false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>