CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_product_being_picked_up_for_this_PO__c.field-meta.xml
<CustomField>
    <fullName>Is_product_being_picked_up_for_this_PO__c</fullName>
    <inlineHelpText>Help Text Sample</inlineHelpText>
    <label>Is product being picked up for this PO?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>