CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Order__c</fullName>
    <formula>Has_Special_Order__c  &gt; 0</formula>
    <label>Is Special Order</label>
    <type>Checkbox</type>
</CustomField>