CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_the_Product_Installable__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Product_Installable__c</fullName>
    <label>Is the Product Installable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>