CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_there_an_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_Alarm__c</fullName>
    <description>Question asked during Measure</description>
    <label>Is there an Alarm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>