CostalCloud/force-app/main/default/objects/WorkOrder/fields/Is_there_an_alarm_present__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_alarm_present__c</fullName>
    <description>Field data captured during Install</description>
    <label>Is there an Alarm Present?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>