CostalCloud/force-app/main/default/objects/WorkOrder/fields/Item_ID_for_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Item_ID_for_Intacct__c</fullName>
    <formula>Program_Code_for_Intacct__c    &amp;  &quot;_&quot;  &amp;  Job_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item ID for Intacct</label>
    <type>Text</type>
</CustomField>