CostalCloud/force-app/main/default/objects/WorkOrder/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <formula>TEXT( Job_SKU_lookup__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Category</label>
    <type>Text</type>
</CustomField>