CostalCloud/force-app/main/default/objects/WorkOrder/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <label>Job Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>