CostalCloud/force-app/main/default/objects/WorkOrder/fields/Job_SKU__c.field-meta.xml
<CustomField>
    <fullName>Job_SKU__c</fullName>
    <inlineHelpText>If integration cannot find the Job SKU the lookup field will be blank but this field will be populated and business can research and create appropriate Job SKU record.</inlineHelpText>
    <label>Job SKU (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>