CostalCloud/force-app/main/default/objects/WorkOrder/fields/Job_SKU_lookup__c.field-meta.xml
<CustomField>
    <fullName>Job_SKU_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job SKU</label>
    <referenceTo>Job_SKU__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>