CostalCloud/force-app/main/default/objects/WorkOrder/fields/Job_Type_request_change__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_request_change__c</fullName>
    <label>Job Type request change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30-Day Tune-Up</fullName>
            </value>
            <value>
                <fullName>Additional Service/Labor</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>