CostalCloud/force-app/main/default/objects/WorkOrder/fields/Key_Rec__c.field-meta.xml
<CustomField>
    <fullName>Key_Rec__c</fullName>
    <label>Key Rec #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>