CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Design_Connect_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Design_Connect_Email_Sent__c</fullName>
    <inlineHelpText>Date auto populates by same workflow that sends email</inlineHelpText>
    <label>Kitchen Design Connect Email Sent</label>
    <type>Date</type>
</CustomField>