CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Measure_Email__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Measure_Email__c</fullName>
    <label>Kitchen Measure Email</label>
    <type>Email</type>
</CustomField>