CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Measure_Sent__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Measure_Sent__c</fullName>
    <label>Kitchen Measure Sent</label>
    <type>Date</type>
</CustomField>