CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Product_Check_in_Complete__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Product_Check_in_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Unless this is checked no other work orders/service appointments may be created!</inlineHelpText>
    <label>Kitchen Product Check-in Complete</label>
    <type>Checkbox</type>
</CustomField>