CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Product_Check_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Product_Check_in_Status__c</fullName>
    <label>Kitchen Product Check-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All products delivered - schedule install</fullName>
            </value>
            <value>
                <fullName>Still pending products - schedule new check-in</fullName>
            </value>
            <value>
                <fullName>Product damaged - technician will submit DDR</fullName>
            </value>
            <value>
                <fullName>Not needed - appointment not Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>