CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Verification_Email__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Verification_Email__c</fullName>
    <label>Kitchen Verification Email</label>
    <type>Email</type>
</CustomField>