CostalCloud/force-app/main/default/objects/WorkOrder/fields/Kitchen_Verification_Sent_del__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Verification_Sent_del__c</fullName>
    <label>Kitchen Verification Sent</label>
    <type>Date</type>
</CustomField>