CostalCloud/force-app/main/default/objects/WorkOrder/fields/Labor_Bid__c.field-meta.xml
<CustomField>
    <fullName>Labor_Bid__c</fullName>
    <label>Labor Bid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>