CostalCloud/force-app/main/default/objects/WorkOrder/fields/Labor_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Unit_Cost__c</fullName>
    <label>Labor Unit Cost</label>
    <summarizedField>Labor__c.Unit_Cost__c</summarizedField>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>