CostalCloud/force-app/main/default/objects/WorkOrder/fields/Last_Contact_Attempt_Made__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Attempt_Made__c</fullName>
    <label>Last Contact Attempt Made</label>
    <type>DateTime</type>
</CustomField>