CostalCloud/force-app/main/default/objects/WorkOrder/fields/Last_Note_not_API__c.field-meta.xml
<CustomField>
    <fullName>Last_Note_not_API__c</fullName>
    <label>Last Note (not API)</label>
    <summarizedField>PO_Notes__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>PO_Notes__c.CreatedById</field>
        <operation>notEqual</operation>
        <value>0058G000000I77k</value>
    </summaryFilterItems>
    <summaryForeignKey>PO_Notes__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>