CostalCloud/force-app/main/default/objects/WorkOrder/fields/Last_PO_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PO_Note_Date__c</fullName>
    <label>Last PO Note Date</label>
    <summarizedField>PO_Notes__c.CreatedDate</summarizedField>
    <summaryForeignKey>PO_Notes__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>