CostalCloud/force-app/main/default/objects/WorkOrder/fields/Lead_Admin_sets_No_Labor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Admin_sets_No_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead - Admin sets No Labor</label>
    <type>Checkbox</type>
</CustomField>