CostalCloud/force-app/main/default/objects/WorkOrder/fields/Lead_negative__c.field-meta.xml
<CustomField>
    <fullName>Lead_negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead - negative</label>
    <type>Checkbox</type>
</CustomField>