CostalCloud/force-app/main/default/objects/WorkOrder/fields/Lead_Positive_Presumed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Positive_Presumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead - Positive/Presumed</label>
    <type>Checkbox</type>
</CustomField>