CostalCloud/force-app/main/default/objects/WorkOrder/fields/Lead_Safe_Renovation_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Lead_Safe_Renovation_Checklist__c</fullName>
    <label>Lead Safe Renovation Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>