CostalCloud/force-app/main/default/objects/WorkOrder/fields/Lead_Test_Exemption_Form__c.field-meta.xml
<CustomField>
    <fullName>Lead_Test_Exemption_Form__c</fullName>
    <label>Lead Test Exemption Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>